# Interview-Hack

./: .gitIgnore  AudioCapture.cpp  AudioCapture.h  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  ConfigDialog.cpp  ConfigDialog.h  ConfigLoader.cpp  ConfigLoader.h  HttpClient.h  HttpClient_Win.cpp  IAudioCapture.h  IScreenshot.h  LICENSE  LLMClient.cpp  LLMClient.h  Logger.cpp  Logger.h  MACOS_PORT.md  OverlayWindow.cpp  OverlayWindow.h  Overlay_Rendering.cpp  Parsers.h  README.md  ROADMAP.md  Screenshot_Win.cpp  Updater.cpp  Updater.h  WinCompat.h  app.manifest  app.rc  build_release.ps1  llm_config.txt  main.cpp  tests.cpp
.github/workflows/: build.yml
macos/: HttpClient_Mac.mm  Info.plist  MacAudioCapture.mm  MacConfigDialog.mm  MacOverlayWindow.h  MacOverlayWindow.mm  MacRenderer.mm  Screenshot_Mac.mm  main_mac.mm
project_app/: models_list.txt
python_backend/: ai_backend.spec  ai_engine.py  build.ps1  config.py  main.py  requirements.txt
